--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,16 @@ body    {
 
 h1 {
 color: white;
+}
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    display: inline;
 }
 
 .live { 
@@ -14,6 +23,7 @@ color: white;
     border: 2px solid black;
     margin: 20px;
     padding: 20px;
-
 }
+
+
 
