--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,14 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body    {
  background-color: lightpink;
+
+}
+
+@media only screen and (max-witdth: 600px) {
+  
 
 }
 
@@ -42,7 +51,18 @@ li a {
 a:hover {
     color: white;
     background: lightpink;
+
 }
+
+.tip{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;    
+    margin: 20px;
+}
+
+
 
 .live { 
     background-color: hotpink;
@@ -56,18 +76,9 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-
     color: #fff;
     height: 60px;
 }
 
 
-.tip{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    
-    
-    
-}
+
